--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
                 <h2 class="section__title">Наши залы</h2>
                 <ol class="halls__list">
                     <li class="halls__item halls__item--image--vibes">
-                        <p class="text halls__text">80's vibes</p>
+                        <p class="halls__text">80's vibes</p>
                     </li>
                     <li class="halls__item halls__item--image--starwars">
-                        <p class="text halls__text"> Star wars</p>
+                        <p class="halls__text"> Star wars</p>
                     </li>
                     <li class="halls__item halls__item--image--wildwest">
-                        <p class="text halls__text">Wild west </p>
+                        <p class="halls__text">Wild west </p>
                     </li>
                     <li class="halls__item halls__item--image--neonstyle">
-                        <p class="text halls__text">Neon style</p>
+                        <p class="halls__text">Neon style</p>
                     </li>
                 </ol>
             </div>
@@ -42,7 +42,7 @@
 
         <section class="section reserve">
             <div class="container">
-                <h2 class="section__title reserve__title">Забронировать</h2>
+                <h2 class="section__title">Забронировать</h2>
                 <form class="reserve-form" action="https://jsonplaceholder.typicode.com/posts">
                     <fieldset class="reserve-form__item">
                         <legend class="reserve-form__title">Выбери зал</legend>
@@ -135,13 +135,13 @@
 
         <section class="section about">
             <div class="container">
-                <h2 class="section__title about__title">О нас</h2>
+                <h2 class="section__title">О нас</h2>
                 <div class="about__info">
-                    <p class="text">Для наших гостей мы создали концептуально новое игровое пространство
+                    <p class="about__text">Для наших гостей мы создали концептуально новое игровое пространство
                         виртуальной реальности в
                         центральной части города.
                     </p>
-                    <p class="text">Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу
+                    <p class="about__text">Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу
                         и
                         радовать Вас топовыми
                         игровыми разработками со всего мира.
@@ -149,11 +149,11 @@
                 </div>
 
                 <blockquote class="blockquote">
-                    <p class="text blockquote__text"><q class="quote">GAME OVER &mdash;
-это место незабываемых впечатлений</q></p>
-                    <figure class="blockquote__image-block image-block">
-                        <img class="image-block__img" src="img/boss.jpg" alt="мужчина">
-                        <figcaption class="text image-block__text">Аркадий Абакшин, создатель игровой территории GAME OVER
+                    <p class="blockquote__text">GAME OVER &mdash;
+это место незабываемых впечатлений</p>
+                    <figure class="creator-block ">
+                        <img class="creator__img" src="img/boss.jpg" alt="мужчина">
+                        <figcaption class="creator__text">Аркадий Абакшин, создатель игровой территории GAME OVER
                         </figcaption>
                     </figure>
                 </blockquote>
@@ -162,13 +162,13 @@
 
         <section class="section faq">
             <div class="container">
-                <h2 class="section__title faq__title">Частые вопросы</h2>
-                <ul class="faq-list">
-                    <li class="faq-item">Можно ли забронировать комнату онлайн?</li>
-                    <li class="faq-item">Могут ли мне вернуть деньги за бронь?</li>
-                    <li class="faq-item">Какая комната самая популярная?</li>
-                    <li class="faq-item">Как получить VIP карту?</li>
-                    <li class="faq-item">Какая комната самая популярная?</li>
+                <h2 class="section__title">Частые вопросы</h2>
+                <ul class="faq__list">
+                    <li class="faq__item">Можно ли забронировать комнату онлайн?</li>
+                    <li class="faq__item">Могут ли мне вернуть деньги за бронь?</li>
+                    <li class="faq__item">Какая комната самая популярная?</li>
+                    <li class="faq__item">Как получить VIP карту?</li>
+                    <li class="faq__item">Какая комната самая популярная?</li>
                 </ul>
             </div>
         </section>
@@ -178,13 +178,10 @@
         <div class="container">
             <h2 class="section__title">Контакты</h2>
             <adress class="footer__contacts contacts ">
-                <p class="contacts__block contacts__block--adress">г. Москва ул.Аквамарина, 16</p>
-                <p class="contacts__block contacts__block--tel">
-                    <a class="contacts__link" href="tel:89509302893">8(950)930-28-93</a>
-                </p>
-                <p class="contacts__block contacts__block--mail ">
-                    <a class="contacts__link" href="mailto:GameOver@gmail.com">GameOver@gmail.com</a>
-                </p>
+                <p class="contacts__block contacts__block--type--adress">г. Москва ул.Аквамарина, 16</p>
+                    <a class="contacts__block contacts__block--type--tel" href="tel:89509302893">8(950)930-28-93</a>
+                    <a class="contacts__block contacts__block--type--mail" href="mailto:GameOver@gmail.com">GameOver@gmail.com</a>
+                
             </adress>
 
             <nav class="footer__nav nav">
